@@ -171,3 +171,5 @@
 	and 'src/rdlogeditb/servicebox.h'.
 2017-02-22 Fred Gleason <fredg@paravelsystems.com>
 	* Added a 'capiError()' signal to all model classes in 'src/common/'.
+2017-02-22 Fred Gleason <fredg@paravelsystems.com>
+	* Added C API error handling to RDLibraryb(1).
